Adicionando saudação(Greeting)

--- a/universidadeCoreWeb/appsettings.json
+++ b/universidadeCoreWeb/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{
+  "Greeting":  "Hello from development",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-universidadeCoreWeb-A12C9B89-63C9-4E06-91F4-1EDCA760D39C;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
